force-app/main/default/objects/Mops__c/Mops__c.object-meta.xml
<CustomObject>
    <label>Mops</label>
    <nameField>
        <displayFormat>Mops-{000000000}</displayFormat>
        <label>Mops Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>