force-app/main/default/objects/Mops__c/fields/Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency__c</fullName>
    <label>Curr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>