force-app/main/default/objects/Mops__c/fields/Default_per__c.field-meta.xml
<CustomField>
    <fullName>Default_per__c</fullName>
    <label>per</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>