force-app/main/default/objects/Mops__c/fields/Default_UoM__c.field-meta.xml
<CustomField>
    <fullName>Default_UoM__c</fullName>
    <label>UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>