force-app/main/default/objects/Mops__c/fields/Gross_net_indicator__c.field-meta.xml
<CustomField>
    <fullName>Gross_net_indicator__c</fullName>
    <label>Gross/net indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>