force-app/main/default/objects/Mops__c/fields/Quotation_date__c.field-meta.xml
<CustomField>
    <fullName>Quotation_date__c</fullName>
    <label>Quote date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>