force-app/main/default/objects/Mops__c/fields/Quotation_Type__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Type__c</fullName>
    <label>Typ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>