force-app/main/default/objects/Mops__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quotation_source__c</columns>
    <columns>Quotation_Type__c</columns>
    <columns>Quotation_number__c</columns>
    <columns>Price__c</columns>
    <columns>Default_Currency__c</columns>
    <columns>Default_UoM__c</columns>
    <columns>Quotation_date__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>